--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 100Daysof
-email: your-email@example.com
+title: 100Daysof Aaron Cuddeback
+email: aaron.cuddeback@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-author: John Doe # This should be your name
-avatar: avatar.png # This should be the file name of your avatar located in assets/images
-twitter_username:  100daysof
-github_username:   FabioRosado/100daysof
-devto_username:    100daysof
-linkedin_username: 100daysof
+author: Aaron Cuddeback # This should be your name
+avatar: aaron.jpg # This should be the file name of your avatar located in assets/images
+twitter_username: aaroncuddeback
+github_username: aaroncuddeback/100daysof
+devto_username: aaroncuddeback
+linkedin_username: aaroncu
 
 # Build settings
 markdown: kramdown
@@ -34,7 +34,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-include: ['_pages']
+include: ["_pages"]
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
