added description to config

--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,10 @@
 title: 100Daysof Aaron Cuddeback
 email: aaron.cuddeback@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+  This is my Blog and a timeline of my 100days of code!  I hope you will follow my journey
+  and learn along with me!
+baseurl: '' # the subpath of your site, e.g. /blog
+url: 'https://100daysofaaron.netlify.com' # the base hostname & protocol for your site, e.g. http://example.com
 author: Aaron Cuddeback # This should be your name
 avatar: aaron.jpg # This should be the file name of your avatar located in assets/images
 twitter_username: aaroncuddeback
@@ -34,7 +33,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-include: ["_pages"]
+include: ['_pages']
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
